Cherry-pick r291598. rdar://problem/89972004

Adjust when _setPrivacyProxyFailClosedForUnreachableNonMainHosts is called
    https://bugs.webkit.org/show_bug.cgi?id=237735

    Reviewed by Geoff Garen.

    * NetworkProcess/cocoa/NetworkDataTaskCocoa.mm:
    (WebKit::NetworkDataTaskCocoa::NetworkDataTaskCocoa):
    * NetworkProcess/cocoa/NetworkSessionCocoa.mm:
    (-[WKNetworkSessionDelegate URLSession:dataTask:didReceiveResponse:completionHandler:]):
    (WebKit::NetworkSessionCocoa::createWebSocketTask):

    Canonical link: https://commits.webkit.org/248691@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291598 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.352@safari-613-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613-branch@291681 268f45cc-cd09-0410-ab3c-d52691b4dbfc